--- a/app/src/main/res/layout/first_activity.xml
+++ b/app/src/main/res/layout/first_activity.xml
@@ -24,7 +24,7 @@
     <Button
         android:id="@+id/button_search"
         android:layout_width="match_parent"
-        android:text="Gjbcr"
+        android:text="@string/button_search_text"
         android:textColor="@color/black"
         style="@style/button_style"
         app:cornerRadius="16dp"
@@ -37,15 +37,27 @@
     <Button
         android:id="@+id/button_library"
         android:layout_width="match_parent"
+        android:text="@string/button_library_text"
+        android:textColor="@color/black"
         style="@style/button_style"
-        app:cornerRadius="16dp">
+        app:cornerRadius="16dp"
+        app:icon="@drawable/library_light_mode"
+        app:iconGravity="textStart"
+        app:iconPadding="@dimen/primary_text_size"
+        app:iconTint="@color/black">
     </Button>
 
     <Button
         android:id="@+id/button_settings"
         android:layout_width="match_parent"
+        android:text="@string/button_settings_text"
+        android:textColor="@color/black"
         style="@style/button_style"
-        app:cornerRadius="16dp">
+        app:cornerRadius="16dp"
+        app:icon="@drawable/settings_light_mode"
+        app:iconGravity="textStart"
+        app:iconPadding="@dimen/primary_text_size"
+        app:iconTint="@color/black">
     </Button>
 
 
