--- a/app/src/main/res/layout/first_activity.xml
+++ b/app/src/main/res/layout/first_activity.xml
@@ -23,10 +23,13 @@
 
     <Button
         android:id="@+id/button_search"
+        style="@style/button_style"
         android:layout_width="match_parent"
+        android:fontFamily="sans-serif-medium"
         android:text="@string/button_search_text"
         android:textColor="@color/black"
-        style="@style/button_style"
+        android:textSize="22sp"
+        android:textStyle="normal"
         app:cornerRadius="16dp"
         app:icon="@drawable/search_light_mode"
         app:iconGravity="textStart"
@@ -38,6 +41,8 @@
         android:id="@+id/button_library"
         android:layout_width="match_parent"
         android:text="@string/button_library_text"
+        android:textSize="22sp"
+        android:textStyle="normal"
         android:textColor="@color/black"
         style="@style/button_style"
         app:cornerRadius="16dp"
@@ -51,6 +56,8 @@
         android:id="@+id/button_settings"
         android:layout_width="match_parent"
         android:text="@string/button_settings_text"
+        android:textSize="22sp"
+        android:textStyle="normal"
         android:textColor="@color/black"
         style="@style/button_style"
         app:cornerRadius="16dp"
