--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,6 +14,7 @@
     <item name="android:layout_height">0dp</item>
     <item name="android:layout_weight">1</item>
     <item name="android:backgroundTint">#ffffff</item>
+    <item name="android:textAllCaps">false</item>
 </style>
 
 </resources>
