--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -3,126 +3,122 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="#ffffff"
-    android:padding="16dp"
-    android:clipToOutline="true">
+    android:orientation="vertical"
+    android:padding="@dimen/margin_on_the_edges">
 
     <LinearLayout
         android:id="@+id/panel_heade"
         android:layout_width="match_parent"
-        android:layout_height="56dp"
+        android:layout_height="wrap_content"
+        android:minHeight="@dimen/height_panel_header"
         android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/button_back"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
+            android:layout_width="@dimen/button_back_size"
+            android:layout_height="@dimen/button_back_size"
             android:layout_gravity="center"
+            android:contentDescription="@string/title_back"
             android:scaleType="fitStart"
-            android:src="@drawable/button_back"
-            android:contentDescription="@string/title_back"/>
+            android:foreground="?attr/selectableItemBackground"
+            android:clickable="true"
+            android:focusable="true"
+            android:src="@drawable/button_back" />
 
 
         <TextView
             android:id="@+id/title_settings"
             android:layout_width="match_parent"
-            android:layout_height="48dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:gravity="center_vertical"
             android:text="@string/title_settings"
             android:textAppearance="@style/title"
             android:textColor="@color/black"
-            android:textSize="26sp"
-            android:gravity="center_vertical"/>
+            android:textSize="@dimen/primary_text_size" />
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="61dp"
-        android:layout_marginTop="24dp"
+        android:layout_height="@dimen/settings_element_height"
+        android:layout_marginTop="@dimen/margin_top_24"
         android:orientation="horizontal">
 
         <TextView
-            android:layout_width="320dp"
-            android:layout_height="19dp"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="@string/dark_theme"
             android:textColor="@color/black"
-            android:textSize="16sp"/>
+            android:textSize="@dimen/primary_text_size_settings_button" />
 
         <androidx.appcompat.widget.SwitchCompat
             android:id="@+id/dark_theme_switch"
-            android:layout_width="56dp"
-            android:layout_height="48dp"
-            android:layout_gravity="center"
-            />
+            android:layout_width="@dimen/button_switch_compat_width"
+            android:layout_height="@dimen/button_switch_compat_height"
+            android:layout_gravity="center" />
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="61dp"
-        android:orientation="horizontal">
+        android:layout_height="@dimen/settings_element_height"
+        android:orientation="horizontal"
+        android:foreground="?attr/selectableItemBackground"
+        android:clickable="true"
+        android:focusable="true">
 
         <TextView
-            android:layout_width="345dp"
-            android:layout_height="19dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="@string/share_app"
             android:textColor="@color/black"
-            android:textSize="16sp"/>
-
-        <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_gravity="center"
-            android:layout_marginEnd="0dp"
-            android:src="@drawable/share_light_mode"/>
+            android:textSize="@dimen/primary_text_size_settings_button"
+            app:drawableEndCompat="@drawable/share_light_mode" />
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="61dp"
-        android:orientation="horizontal">
+        android:layout_height="@dimen/settings_element_height"
+        android:orientation="horizontal"
+        android:foreground="?attr/selectableItemBackground"
+        android:clickable="true"
+        android:focusable="true">
 
         <TextView
-            android:layout_width="345dp"
-            android:layout_height="19dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="@string/write_to_support"
             android:textColor="@color/black"
-            android:textSize="16sp"/>
+            android:textSize="@dimen/primary_text_size_settings_button"
+            app:drawableEndCompat="@drawable/support_light_mode" />
 
-        <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_gravity="center"
-            android:layout_marginEnd="0dp"
-            android:src="@drawable/support_light_mode"/>
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="61dp"
-        android:orientation="horizontal">
+        android:layout_height="@dimen/settings_element_height"
+        android:orientation="horizontal"
+        android:foreground="?attr/selectableItemBackground"
+        android:clickable="true"
+        android:focusable="true">
 
         <TextView
-            android:layout_width="345dp"
-            android:layout_height="19dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="@string/user_application"
             android:textColor="@color/black"
-            android:textSize="16sp"/>
+            android:textSize="@dimen/primary_text_size_settings_button"
+            app:drawableEndCompat="@drawable/arrow_forward_light_mode" />
 
-        <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_gravity="center"
-            android:layout_marginEnd="0dp"
-            android:src="@drawable/arrow_forward_light_mode"/>
 
     </LinearLayout>
 
