--- a/app/src/main/res/layout/start_activity.xml
+++ b/app/src/main/res/layout/start_activity.xml
@@ -3,70 +3,58 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@color/blue_background"
-    android:padding="16dp">
+    android:orientation="vertical"
+    android:padding="@dimen/margin_on_the_edges">
 
     <RelativeLayout
         android:id="@+id/panel_heade"
-        android:layout_width="360dp"
-        android:layout_height="56dp">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:minHeight="@dimen/height_panel_header">
 
-        <TextView
-            android:layout_width="154dp"
-            android:layout_height="30dp"
+        <androidx.appcompat.widget.AppCompatTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/yandex_sans_display_light"
+            android:gravity="top"
             android:text="@string/title"
-            android:textAppearance="@style/title"
-            android:gravity="top"/>
+            android:textAppearance="@style/title" />
 
     </RelativeLayout>
 
     <Button
         android:id="@+id/button_search"
         style="@style/button_style"
-        android:layout_width="match_parent"
-        android:fontFamily="sans-serif-medium"
+        android:fontFamily="@font/yandex_sans_display_light"
         android:text="@string/button_search_text"
-        android:textColor="@color/black"
-        android:textSize="22sp"
-        android:textStyle="normal"
-        app:cornerRadius="16dp"
+        app:cornerRadius="@dimen/primary_corner_radius_for_button"
         app:icon="@drawable/search_light_mode"
         app:iconGravity="textStart"
-        app:iconPadding="@dimen/primary_text_size"
-        app:iconTint="@color/black">
-    </Button>
+        app:iconPadding="@dimen/medium_padding"
+        app:iconTint="@color/black"></Button>
 
     <Button
         android:id="@+id/button_library"
-        android:layout_width="match_parent"
-        android:text="@string/button_library_text"
-        android:textSize="22sp"
-        android:textStyle="normal"
-        android:textColor="@color/black"
         style="@style/button_style"
-        app:cornerRadius="16dp"
+        android:fontFamily="@font/yandex_sans_display_light"
+        android:text="@string/button_library_text"
+        app:cornerRadius="@dimen/primary_corner_radius_for_button"
         app:icon="@drawable/library_light_mode"
         app:iconGravity="textStart"
-        app:iconPadding="@dimen/primary_text_size"
-        app:iconTint="@color/black">
-    </Button>
+        app:iconPadding="@dimen/medium_padding"
+        app:iconTint="@color/black"></Button>
 
     <Button
         android:id="@+id/button_settings"
-        android:layout_width="match_parent"
-        android:text="@string/button_settings_text"
-        android:textSize="22sp"
-        android:textStyle="normal"
-        android:textColor="@color/black"
         style="@style/button_style"
-        app:cornerRadius="16dp"
+        android:fontFamily="@font/yandex_sans_display_light"
+        android:text="@string/button_settings_text"
+        app:cornerRadius="@dimen/primary_corner_radius_for_button"
         app:icon="@drawable/settings_light_mode"
         app:iconGravity="textStart"
-        app:iconPadding="@dimen/primary_text_size"
-        app:iconTint="@color/black">
-    </Button>
-
+        app:iconPadding="@dimen/medium_padding"
+        app:iconTint="@color/black"></Button>
 
 
 </LinearLayout>
