--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="blue_background">#3772E7</color>
+    <color name="icon_color_light_mode">#1a1b22</color>
+    <color name="settings_icon_color_light_mode">#AEAFB4</color>
 </resources>
