--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="title">
-        <item name="android:textSize">22sp</item>
-        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:textSize">@dimen/primary_text_size</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 
 <style name="button_style">
     <item name="android:textColor">@color/black</item>
-    <item name="android:textSize">15sp</item>
-    <item name="android:padding">10dp</item>
     <item name="android:textStyle">bold</item>
+    <item name="android:textAllCaps">false</item>
+    <item name="android:textSize">@dimen/primary_text_size</item>
+    <item name="android:padding">10dp</item>
     <item name="android:gravity">center</item>
     <item name="android:layout_height">0dp</item>
     <item name="android:layout_weight">1</item>
-    <item name="android:backgroundTint">#ffffff</item>
-    <item name="android:textAllCaps">false</item>
+    <item name="android:layout_width">match_parent</item>
+    <item name="android:backgroundTint">@color/white</item>
 </style>
 
 </resources>
