--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -42,7 +42,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/settings_element_height"
+        android:layout_height="wrap_content"
+        android:minHeight="@dimen/settings_element_height"
         android:layout_marginTop="@dimen/margin_top_24"
         android:orientation="horizontal">
 
@@ -65,7 +66,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/settings_element_height"
+        android:layout_height="wrap_content"
+        android:minHeight="@dimen/settings_element_height"
         android:orientation="horizontal"
         android:foreground="?attr/selectableItemBackground"
         android:clickable="true"
@@ -84,7 +86,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/settings_element_height"
+        android:layout_height="wrap_content"
+        android:minHeight="@dimen/settings_element_height"
         android:orientation="horizontal"
         android:foreground="?attr/selectableItemBackground"
         android:clickable="true"
@@ -104,7 +107,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/settings_element_height"
+        android:layout_height="wrap_content"
+        android:minHeight="@dimen/settings_element_height"
         android:orientation="horizontal"
         android:foreground="?attr/selectableItemBackground"
         android:clickable="true"
