--- a/app/src/main/res/layout/start_activity.xml
+++ b/app/src/main/res/layout/start_activity.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/blue_background"
     android:orientation="vertical"
-    android:padding="@dimen/margin_on_the_edges">
+    android:padding="@dimen/margin_on_the_edges"
+    style="@style/StartActivityBackground">
 
     <RelativeLayout
         android:id="@+id/panel_heade"
@@ -16,45 +16,33 @@
         <androidx.appcompat.widget.AppCompatTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/yandex_sans_display_light"
+            android:fontFamily="@font/ys_display_medium"
             android:gravity="top"
             android:text="@string/title"
-            android:textAppearance="@style/title" />
+            android:textAppearance="@style/Title"/>
 
     </RelativeLayout>
 
     <Button
         android:id="@+id/button_search"
-        style="@style/button_style"
-        android:fontFamily="@font/yandex_sans_display_light"
+        style="@style/ButtonStyle"
         android:text="@string/button_search_text"
         app:cornerRadius="@dimen/primary_corner_radius_for_button"
-        app:icon="@drawable/search_light_mode"
-        app:iconGravity="textStart"
-        app:iconPadding="@dimen/medium_padding"
-        app:iconTint="@color/black"></Button>
+        app:icon="@drawable/search_light_mode" />
 
     <Button
         android:id="@+id/button_library"
-        style="@style/button_style"
-        android:fontFamily="@font/yandex_sans_display_light"
+        style="@style/ButtonStyle"
         android:text="@string/button_library_text"
         app:cornerRadius="@dimen/primary_corner_radius_for_button"
-        app:icon="@drawable/library_light_mode"
-        app:iconGravity="textStart"
-        app:iconPadding="@dimen/medium_padding"
-        app:iconTint="@color/black"></Button>
+        app:icon="@drawable/library_light_mode" />
 
     <Button
         android:id="@+id/button_settings"
-        style="@style/button_style"
-        android:fontFamily="@font/yandex_sans_display_light"
+        style="@style/ButtonStyle"
         android:text="@string/button_settings_text"
         app:cornerRadius="@dimen/primary_corner_radius_for_button"
-        app:icon="@drawable/settings_light_mode"
-        app:iconGravity="textStart"
-        app:iconPadding="@dimen/medium_padding"
-        app:iconTint="@color/black"></Button>
+        app:icon="@drawable/settings_light_mode" />
 
 
 </LinearLayout>
