--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,10 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="blue_background">#3772E7</color>
-    <color name="icon_color_light_mode">#1a1b22</color>
+    <color name="yp_blue">#3772E7</color>
+    <color name="yp_blue_light">#9FBBF3</color>
+    <color name="yp_black">#1A1B22</color>
+    <color name="yp_text_gray">#AEAFB4</color>
+    <color name="yp_light_gray">#E6E8EB</color>
     <color name="settings_icon_color_light_mode">#AEAFB4</color>
 </resources>
