--- a/app/src/main/res/drawable/edit_text_dackground.xml
+++ b/app/src/main/res/drawable/edit_text_dackground.xml
@@ -4,8 +4,5 @@
     <solid android:color="#FFFFFF"/>
     <stroke android:width="1dip" android:color="#ffffff" />
     <corners
-        android:bottomRightRadius="15dp"
-        android:bottomLeftRadius="15dp"
-        android:topLeftRadius="15dp"
-        android:topRightRadius="15dp"/>
+        android:radius="@dimen/radius8" />
 </shape>
