--- a/app/src/main/res/layout/start_activity.xml
+++ b/app/src/main/res/layout/start_activity.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    style="@style/StartActivityBackground"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="@dimen/margin_on_the_edges"
-    style="@style/StartActivityBackground">
+    tools:context=".MainActivity">
 
     <RelativeLayout
         android:id="@+id/panel_heade"
@@ -19,7 +21,7 @@
             android:fontFamily="@font/ys_display_medium"
             android:gravity="top"
             android:text="@string/title"
-            android:textAppearance="@style/Title"/>
+            android:textAppearance="@style/Title" />
 
     </RelativeLayout>
 
@@ -43,6 +45,5 @@
         android:text="@string/button_settings_text"
         app:cornerRadius="@dimen/primary_corner_radius_for_button"
         app:icon="@drawable/settings_light_mode" />
-
 
 </LinearLayout>
