--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -1,19 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <!-- Стили для Стартового экрана -->
+
     <style name="Title">
         <item name="android:textSize">@dimen/primary_text_size</item>
         <item name="android:textColor">@color/white</item>
     </style>
 
-
     <style name="StartActivityBackground">
         <item name="android:background">@color/yp_black</item>
     </style>
 
+    <!-- Стили для экрана Настроек -->
+
     <style name="SettingsActivityBackground">
         <item name="android:background">@color/yp_black</item>
-
     </style>
 
     <style name="SettingsActivityTextColor">
@@ -29,6 +31,18 @@
     <style name="ButtonSwitch">
         <item name="thumbTint">@color/yp_blue</item>
         <item name="trackTint">@color/yp_blue_light</item>
+    </style>
+
+    <!-- Стили для экрана Поиска -->
+
+    <style name="EditTextStyle">
+        <item name="android:drawableTint">@color/yp_black</item>
+        <item name="android:backgroundTint">@color/white</item>
+        <item name="android:textColorHint">@color/yp_black</item>
+    </style>
+
+    <style name="ButtonForEditTextStyle">
+        <item name="tint">@color/yp_black</item>
     </style>
 
 </resources>
