--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,6 +9,7 @@
     <dimen name="margin_on_the_edges">16dp</dimen>
     <dimen name="margin_top_24">24dp</dimen>
     <dimen name="edit_text_height">36dp</dimen>
+    <dimen name="height40">40dp</dimen>
     <dimen name="button_back_size">48dp</dimen>
     <dimen name="button_switch_compat_height">48dp</dimen>
     <dimen name="linear_layout_for_edit_text_height">52dp</dimen>
