--- a/app/src/main/res/layout/library_activity.xml
+++ b/app/src/main/res/layout/library_activity.xml
@@ -11,6 +11,6 @@
         android:gravity="center"
         android:text="@string/title_library"
         android:textColor="@color/black"
-        android:textSize="@dimen/primary_text_size"/>
+        android:textSize="@dimen/primary_text_size_22"/>
 
 </LinearLayout>
