--- a/app/src/main/res/layout/track_item.xml
+++ b/app/src/main/res/layout/track_item.xml
@@ -1,21 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    style="@style/track_item_style_1"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
     android:layout_marginTop="@dimen/padding16"
-    android:background="@color/white">
+    android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/album_image"
         android:layout_width="@dimen/album_image_size"
         android:layout_height="@dimen/album_image_size"
         android:layout_marginStart="@dimen/padding12"
-        android:layout_marginEnd="@dimen/padding8"
         android:layout_marginTop="@dimen/padding8"
+        android:layout_marginEnd="@dimen/padding8"
         android:layout_marginBottom="@dimen/padding8"
-        android:scaleType="centerCrop"/>
+        android:scaleType="centerCrop"
+        tools:src="@drawable/default_album_image" />
 
 
     <LinearLayout
@@ -28,43 +30,54 @@
 
         <TextView
             android:id="@+id/track_name"
+            style="@style/track_item_style_1"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            />
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:fontFamily="@font/ys_display_medium"
+            android:maxLines="1"
+            android:textSize="@dimen/primary_text_size_16"
+            tools:text="ООООЧень длинное название песни прям оооооочень длинное" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1">
+            android:layout_height="wrap_content">
 
             <TextView
                 android:id="@+id/group_name"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"/>
-
-            <ImageView
-                android:layout_width="@dimen/padding12"
-                android:layout_height="match_parent"
-                android:src="@drawable/cercle2"/>
+                style="@style/track_item_style_2"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ellipsize="end"
+                android:fontFamily="@font/ys_display_medium"
+                android:maxLines="1"
+                android:textSize="@dimen/primary_text_size_13"
+                app:drawableEndCompat="@drawable/cercle2"
+                tools:text="ООООООчень динное название группы прям капец" />
 
             <TextView
                 android:id="@+id/track_duration"
+                style="@style/track_item_style_2"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"/>
-            
-        </LinearLayout>
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/ys_display_medium"
+                android:maxLines="1"
+                android:textSize="@dimen/primary_text_size_13"
+                tools:text="1122:06" />
 
+        </LinearLayout>
 
     </LinearLayout>
 
     <ImageView
         android:id="@+id/arrow_foward"
+        style="@style/track_item_style_2"
         android:layout_width="@dimen/padding24"
         android:layout_height="@dimen/padding24"
         android:layout_gravity="center"
         android:layout_marginStart="@dimen/padding8"
         android:layout_marginEnd="@dimen/padding12"
-        android:src="@drawable/arrow_forward_light_mode"/>
+        android:src="@drawable/arrow_forward_light_mode" />
 
 </LinearLayout>
