--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -4,7 +4,7 @@
     <!-- Стили для Стартового экрана -->
 
     <style name="Title">
-        <item name="android:textSize">@dimen/primary_text_size</item>
+        <item name="android:textSize">@dimen/primary_text_size_22</item>
         <item name="android:textColor">@color/white</item>
     </style>
 
@@ -43,6 +43,17 @@
 
     <style name="ButtonForEditTextStyle">
         <item name="tint">@color/yp_black</item>
+    </style>
+
+    <style name="track_item_style_1">
+        <item name="android:background">@color/yp_black</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="track_item_style_2">
+        <item name="android:drawableTint">@color/white</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="tint">@color/white</item>
     </style>
 
 </resources>
