--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,7 +4,7 @@
     <!-- Стили для Стартового экрана -->
 
     <style name="Title">
-        <item name="android:textSize">@dimen/primary_text_size</item>
+        <item name="android:textSize">@dimen/primary_text_size_22</item>
         <item name="android:textColor">@color/white</item>
     </style>
 
@@ -12,7 +12,7 @@
         <item name="android:textColor">@color/black</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textAllCaps">false</item>
-        <item name="android:textSize">@dimen/primary_text_size</item>
+        <item name="android:textSize">@dimen/primary_text_size_22</item>
         <item name="android:fontFamily">@font/ys_display_medium</item>
         <item name="android:padding">10dp</item>
         <item name="android:gravity">center</item>
@@ -59,6 +59,17 @@
     </style>
 
     <style name="ButtonForEditTextStyle">
+        <item name="tint">@color/yp_text_gray</item>
+    </style>
+
+    <style name="track_item_style_1">
+        <item name="android:background">@color/white</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="track_item_style_2">
+        <item name="android:drawableTint">@color/yp_text_gray</item>
+        <item name="android:textColor">@color/yp_text_gray</item>
         <item name="tint">@color/yp_text_gray</item>
     </style>
 
