--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -56,4 +56,9 @@
         <item name="tint">@color/white</item>
     </style>
 
+    <style name="MessageError">
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
 </resources>
