--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -72,5 +72,10 @@
         <item name="android:textColor">@color/yp_text_gray</item>
         <item name="tint">@color/yp_text_gray</item>
     </style>
+    
+    <style name="MessageError">
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:textColor">@color/yp_black</item>
+    </style>
 
 </resources>
