--- a/app/src/main/res/layout/player_activiity.xml
+++ b/app/src/main/res/layout/player_activiity.xml
@@ -1,37 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/left_border_24"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_begin="24dp" />
+        app:layout_constraintGuide_begin="@dimen/padding24" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/left_border_16"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_begin="16dp" />
+        app:layout_constraintGuide_begin="@dimen/padding16" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/right_border_24"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_end="24dp" />
+        app:layout_constraintGuide_end="@dimen/padding24" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/right_border_16"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_end="16dp" />
+        app:layout_constraintGuide_end="@dimen/padding16" />
 
     <ImageView
         android:id="@+id/button_back"
@@ -39,53 +39,286 @@
         android:layout_width="@dimen/button_back_size"
         android:layout_height="@dimen/button_back_size"
         android:layout_gravity="center"
-        app:layout_constraintStart_toStartOf="@id/left_border_16"
-        app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="@dimen/padding4"
         android:clickable="true"
         android:contentDescription="@string/title_back"
         android:focusable="true"
-        android:src="@drawable/button_back" />
+        android:src="@drawable/button_back"
+        app:layout_constraintStart_toStartOf="@id/left_border_16"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/album_image"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="28dp"
-        app:layout_constraintDimensionRatio="h, 1:1"
+        android:layout_marginTop="@dimen/padding16"
+        android:layout_marginBottom="@dimen/padding24"
+        android:scaleType="centerCrop"
+        app:layout_constraintBottom_toTopOf="@id/track_name"
+        app:layout_constraintDimensionRatio="w, 1:1"
         app:layout_constraintEnd_toEndOf="@id/right_border_24"
         app:layout_constraintStart_toStartOf="@id/left_border_24"
         app:layout_constraintTop_toBottomOf="@id/button_back"
-        tools:src="@drawable/default_album_image"/>
+        tools:src="@drawable/default_album_image"
+        tools:background="@color/yp_blue"/>
 
     <TextView
         android:id="@+id/track_name"
+        style="@style/text_style_for_player_activity"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/padding12"
+        android:ellipsize="end"
+        android:fontFamily="@font/ys_display_medium"
+        android:maxLines="1"
+        android:textSize="@dimen/primary_text_size_22"
+        app:layout_constraintBottom_toTopOf="@id/group_name"
         app:layout_constraintStart_toStartOf="@id/left_border_24"
         app:layout_constraintEnd_toEndOf="@id/right_border_24"
-        app:layout_constraintTop_toBottomOf="@id/album_image"
-        android:layout_marginTop="@dimen/margin_top_24"
-        android:textColor="@color/yp_black"
-        android:fontFamily="@font/ys_display_medium"
-        android:textSize="22sp"
-        android:ellipsize="end"
         tools:text="Yesterday (Remastered 2009)" />
 
     <TextView
         android:id="@+id/group_name"
+        style="@style/text_style_for_player_activity"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/padding28"
+        android:ellipsize="end"
+        android:fontFamily="@font/ys_display_medium"
+        android:maxLines="1"
+        android:textSize="@dimen/primary_text_size_16"
+        app:layout_constraintBottom_toTopOf="@id/button_play"
         app:layout_constraintStart_toStartOf="@id/left_border_24"
         app:layout_constraintEnd_toEndOf="@id/right_border_24"
-        app:layout_constraintTop_toBottomOf="@id/track_name"
-        android:layout_marginTop="12dp"
-        android:textColor="@color/yp_black"
-        android:fontFamily="@font/ys_display_medium"
-        android:textSize="16sp"
-        android:ellipsize="end"
         tools:text="The Beatles" />
 
+    <TextView
+        android:id="@+id/country"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/padding28"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:fontFamily="@font/ys_display_medium"
+        android:text="@string/country"
+        android:textAlignment="textStart"
+        android:textColor="@color/yp_text_gray"
+        android:textSize="@dimen/primary_text_size_15"
+        app:layout_constraintHorizontal_weight="3"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/country_name"
+        app:layout_constraintStart_toStartOf="@id/left_border_16" />
+
+    <TextView
+        android:id="@+id/country_name"
+        style="@style/text_style_for_player_activity"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:fontFamily="@font/ys_display_medium"
+        android:textAlignment="textEnd"
+        android:textSize="@dimen/primary_text_size_15"
+        app:layout_constraintHorizontal_weight="7"
+        app:layout_constraintBottom_toBottomOf="@id/country"
+        app:layout_constraintEnd_toEndOf="@id/right_border_16"
+        app:layout_constraintStart_toEndOf="@id/country"
+        tools:text="Великобритания" />
+
+    <TextView
+        android:id="@+id/genre"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/padding16"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:fontFamily="@font/ys_display_medium"
+        android:text="@string/genre"
+        android:textAlignment="textStart"
+        android:textColor="@color/yp_text_gray"
+        android:textSize="@dimen/primary_text_size_15"
+        app:layout_constraintHorizontal_weight="3"
+        app:layout_constraintBottom_toTopOf="@id/country"
+        app:layout_constraintEnd_toStartOf="@id/genre_name"
+        app:layout_constraintStart_toStartOf="@id/left_border_16" />
+
+    <TextView
+        android:id="@+id/genre_name"
+        style="@style/text_style_for_player_activity"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:fontFamily="@font/ys_display_medium"
+        android:textAlignment="textEnd"
+        android:textSize="@dimen/primary_text_size_15"
+        app:layout_constraintHorizontal_weight="7"
+        app:layout_constraintBottom_toBottomOf="@id/genre"
+        app:layout_constraintEnd_toEndOf="@id/right_border_16"
+        app:layout_constraintStart_toEndOf="@id/genre"
+        tools:text="Rock" />
+
+    <TextView
+        android:id="@+id/year"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/padding16"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:fontFamily="@font/ys_display_medium"
+        android:text="@string/year"
+        android:textAlignment="textStart"
+        android:textColor="@color/yp_text_gray"
+        android:textSize="@dimen/primary_text_size_15"
+        app:layout_constraintHorizontal_weight="3"
+        app:layout_constraintBottom_toTopOf="@id/genre"
+        app:layout_constraintEnd_toStartOf="@id/song_year"
+        app:layout_constraintStart_toStartOf="@id/left_border_16" />
+
+    <TextView
+        android:id="@+id/song_year"
+        style="@style/text_style_for_player_activity"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:fontFamily="@font/ys_display_medium"
+        android:textAlignment="textEnd"
+        android:textSize="@dimen/primary_text_size_15"
+        app:layout_constraintHorizontal_weight="7"
+        app:layout_constraintBottom_toBottomOf="@id/year"
+        app:layout_constraintEnd_toEndOf="@id/right_border_16"
+        app:layout_constraintStart_toEndOf="@id/year"
+        tools:text="1965" />
+
+    <TextView
+        android:id="@+id/album"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/padding16"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:fontFamily="@font/ys_display_medium"
+        android:text="@string/album"
+        android:textAlignment="textStart"
+        android:textColor="@color/yp_text_gray"
+        android:textSize="@dimen/primary_text_size_15"
+        app:layout_constraintHorizontal_weight="3"
+        app:layout_constraintBottom_toTopOf="@id/year"
+        app:layout_constraintEnd_toStartOf="@id/album_name"
+        app:layout_constraintStart_toStartOf="@id/left_border_16" />
+
+    <TextView
+        android:id="@+id/album_name"
+        style="@style/text_style_for_player_activity"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:fontFamily="@font/ys_display_medium"
+        android:textAlignment="textEnd"
+        android:textSize="@dimen/primary_text_size_15"
+        app:layout_constraintHorizontal_weight="7"
+        app:layout_constraintBottom_toBottomOf="@id/album"
+        app:layout_constraintEnd_toEndOf="@id/right_border_16"
+        app:layout_constraintStart_toEndOf="@id/album"
+        tools:text="Yeaterday (Remastered 2009)" />
+
+    <TextView
+        android:id="@+id/duration"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/padding16"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:fontFamily="@font/ys_display_medium"
+        android:text="@string/duration"
+        android:textAlignment="textStart"
+        android:textColor="@color/yp_text_gray"
+        android:textSize="@dimen/primary_text_size_15"
+        app:layout_constraintHorizontal_weight="3"
+        app:layout_constraintBottom_toTopOf="@id/album"
+        app:layout_constraintEnd_toStartOf="@id/song_duration"
+        app:layout_constraintStart_toStartOf="@id/left_border_16" />
+
+    <TextView
+        android:id="@+id/song_duration"
+        style="@style/text_style_for_player_activity"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:fontFamily="@font/ys_display_medium"
+        android:textAlignment="textEnd"
+        android:textSize="@dimen/primary_text_size_15"
+        app:layout_constraintHorizontal_weight="7"
+        app:layout_constraintBottom_toBottomOf="@id/duration"
+        app:layout_constraintEnd_toEndOf="@id/right_border_16"
+        app:layout_constraintStart_toEndOf="@id/duration"
+        tools:text="5:35" />
+
+    <TextView
+        android:id="@+id/time_of_play"
+        style="@style/text_style_for_player_activity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/padding28"
+        android:fontFamily="@font/ys_display_medium"
+        android:textSize="@dimen/primary_text_size_16"
+        app:layout_constraintBottom_toTopOf="@id/duration"
+        app:layout_constraintEnd_toEndOf="@id/right_border_16"
+        app:layout_constraintStart_toStartOf="@id/left_border_16"
+        tools:text="0:30" />
+
+    <ImageButton
+        android:id="@+id/button_play"
+        style="@style/button_play"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="@dimen/padding4"
+        android:background="@drawable/round_button"
+        android:scaleType="centerCrop"
+        android:src="@drawable/button_play"
+        android:clickable="true"
+        app:layout_constraintBottom_toTopOf="@id/time_of_play"
+        app:layout_constraintDimensionRatio="h, 1:1"
+        app:layout_constraintEnd_toEndOf="@id/right_border_24"
+        app:layout_constraintStart_toStartOf="@id/left_border_24"
+        app:layout_constraintWidth_percent="0.28"/>
+
+    <ImageButton
+        android:id="@+id/button_queue"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:alpha="0.25"
+        android:background="@drawable/round_button"
+        android:backgroundTint="@color/yp_black"
+        android:scaleType="centerCrop"
+        android:src="@drawable/button_queue"
+        android:clickable="true"
+        app:layout_constraintBottom_toBottomOf="@id/button_play"
+        app:layout_constraintDimensionRatio="h, 1:1"
+        app:layout_constraintStart_toStartOf="@id/left_border_24"
+        app:layout_constraintTop_toTopOf="@id/button_play"
+        app:layout_constraintWidth_percent="0.14"
+        app:tint="@color/white" />
+
+    <ImageButton
+        android:id="@+id/button_favorite"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:alpha="0.25"
+        android:background="@drawable/round_button"
+        android:backgroundTint="@color/yp_black"
+        android:scaleType="centerCrop"
+        android:src="@drawable/button_favorite"
+        android:clickable="true"
+        app:layout_constraintBottom_toBottomOf="@id/button_play"
+        app:layout_constraintDimensionRatio="h, 1:1"
+        app:layout_constraintEnd_toStartOf="@id/right_border_24"
+        app:layout_constraintTop_toTopOf="@id/button_play"
+        app:layout_constraintWidth_percent="0.14"
+        app:tint="@color/white" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
