--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,6 +11,7 @@
     <dimen name="margin_on_the_edges">16dp</dimen>
     <dimen name="padding24">24dp</dimen>
     <dimen name="margin_top_24">24dp</dimen>
+    <dimen name="padding28">28dp</dimen>
     <dimen name="edit_text_height">36dp</dimen>
     <dimen name="height40">40dp</dimen>
     <dimen name="album_image_size">45dp</dimen>
@@ -24,6 +25,7 @@
     <dimen name="margin_top_80">80dp</dimen>
     <dimen name="primary_text_size_13">13sp</dimen>
     <dimen name="primary_text_size_14">14sp</dimen>
+    <dimen name="primary_text_size_15">15sp</dimen>
     <dimen name="primary_text_size_16">16sp</dimen>
     <dimen name="primary_text_size_19">19sp</dimen>
     <dimen name="primary_text_size_22">22sp</dimen>
