--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -82,4 +82,14 @@
         <item name="android:backgroundTint">@color/yp_black</item>
     </style>
 
+    <!-- Стили для экрана Проигрователя -->
+
+    <style name="button_play">
+        <item name="tint">@color/yp_black</item>
+    </style>
+
+    <style name="text_style_for_player_activity">
+        <item name="android:textColor">@color/yp_black</item>
+    </style>
+
 </resources>
