--- a/app/src/main/res/layout/track_item.xml
+++ b/app/src/main/res/layout/track_item.xml
@@ -41,7 +41,7 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/group_name"
+                android:id="@+id/artist_name"
                 style="@style/track_item_style_2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
