--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -75,4 +75,8 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
+    <style name="player_button">
+        <item name="android:backgroundTint">@color/gray_button_night_mode</item>
+    </style>
+
 </resources>
