--- a/app/src/main/res/layout/player_activity.xml
+++ b/app/src/main/res/layout/player_activity.xml
@@ -35,7 +35,7 @@
         app:layout_constraintGuide_end="@dimen/padding16" />
 
     <ImageView
-        android:id="@+id/button_back"
+        android:id="@+id/iv_button_back"
         style="@style/SettingsActivityTitle"
         android:layout_width="@dimen/button_back_size"
         android:layout_height="@dimen/button_back_size"
@@ -59,7 +59,7 @@
         app:layout_constraintDimensionRatio="w, 1:1"
         app:layout_constraintEnd_toEndOf="@id/right_border_24"
         app:layout_constraintStart_toStartOf="@id/left_border_24"
-        app:layout_constraintTop_toBottomOf="@id/button_back"
+        app:layout_constraintTop_toBottomOf="@id/iv_button_back"
         tools:src="@drawable/default_album_image"
         tools:background="@color/yp_blue"/>
 
