--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -17,7 +17,7 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/button_back"
+            android:id="@+id/iv_button_back"
             style="@style/SettingsActivityTitle"
             android:layout_width="@dimen/button_back_size"
             android:layout_height="@dimen/button_back_size"
