--- a/app/src/main/res/layout/library_fragment.xml
+++ b/app/src/main/res/layout/library_fragment.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.ui.library.activity.LibraryActivity">
+    tools:context=".presentation.ui.library.fragments.LibraryFragment">
 
     <TextView
         android:id="@+id/tv_title"
