--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -102,4 +102,11 @@
         <item name="tabIndicatorColor">@color/white</item>
     </style>
 
+    <!-- Стили для экрана создания нового альбома -->
+    <style name="NewPlaylistEditTextStyle">
+        <item name="android:background">@drawable/frame_2</item>
+        <item name="android:backgroundTint">@color/yp_black</item>
+        <item name="android:textColorHint">@color/white</item>
+    </style>
+
 </resources>
