--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -103,10 +103,7 @@
     </style>
 
     <!-- Стили для экрана создания нового альбома -->
-    <style name="NewPlaylistEditTextStyle">
-        <item name="android:background">@drawable/frame_2</item>
-        <item name="android:backgroundTint">@color/yp_black</item>
-        <item name="android:textColorHint">@color/white</item>
+    <style name="new_playlist_edit_text_style" parent="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
     </style>
 
 </resources>
