--- a/app/src/main/res/drawable/frame_2.xml
+++ b/app/src/main/res/drawable/frame_2.xml
@@ -2,10 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/yp_black" />
+    <solid android:color="@color/yp_text_gray" />
 
     <corners android:radius="10dp" />
 
-    <stroke android:color="@color/yp_light_gray"
+    <stroke android:color="@color/yp_text_gray"
         android:width="2dp" />
 </shape>
