--- a/app/src/main/res/layout/player_fragment.xml
+++ b/app/src/main/res/layout/player_fragment.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.ui.player.activity.PlayerActivity">
+    tools:context=".presentation.ui.player.fragment.PlayerFragment">
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/left_border_24"
