--- a/app/src/main/res/layout/create_new_playlist_fragment.xml
+++ b/app/src/main/res/layout/create_new_playlist_fragment.xml
@@ -6,8 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".presentation.ui.new_playlist.NewPlaylistFragment">
-
+    tools:context=".presentation.ui.new_playlist.fragment.NewPlaylistFragment">
 
 
     <ImageView
@@ -44,58 +43,86 @@
         android:layout_height="0dp"
         android:layout_marginHorizontal="@dimen/padding24"
         android:layout_marginTop="@dimen/padding24"
-        android:src="@drawable/baseline_add_photo"
-        android:scaleType="center"
         android:background="@drawable/dotted_frame"
+        android:scaleType="center"
+        android:src="@drawable/baseline_add_photo"
         app:layout_constraintDimensionRatio="w, 1:1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_title"/>
-
+        app:layout_constraintTop_toBottomOf="@id/tv_title" />
 
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/playListNameTextInputLayout"
+        android:id="@+id/til_name"
         style="@style/PlayListCreateTextInputLayout"
+        android:layout_marginHorizontal="@dimen/padding16"
+        android:layout_marginTop="@dimen/height40"
         android:hint="@string/name"
         app:boxStrokeColor="@color/yp_text_gray"
         app:hintTextColor="@color/yp_text_gray"
-        android:layout_marginTop="32dp"
-        android:layout_marginHorizontal="@dimen/padding16"
-        app:layout_constraintTop_toBottomOf="@id/iv_album"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/iv_album">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/playListNameEditText"
-            android:inputType="textCapSentences"
+            android:id="@+id/tiet_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:fontWeight="400"
-            android:textSize="@dimen/primary_text_size_16"
-            android:maxLength="225"
+            android:inputType="textCapSentences"
             android:lines="1"
+            android:maxLength="225"
             android:singleLine="true"
-            />
+            android:textSize="@dimen/primary_text_size_16"
+            android:textCursorDrawable="@drawable/my_cursor"/>
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/til_description"
+        style="@style/PlayListCreateTextInputLayout"
+        android:layout_marginHorizontal="@dimen/padding16"
+        android:layout_marginTop="@dimen/padding16"
+        android:hint="@string/description"
+        app:boxStrokeColor="@color/yp_text_gray"
+        app:hintTextColor="@color/yp_text_gray"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/til_name">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/tiet_description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textCapSentences"
+            android:lines="1"
+            android:maxLength="225"
+            android:singleLine="true"
+            android:textSize="@dimen/primary_text_size_16"
+            android:textCursorDrawable="@drawable/my_cursor_light"/>
 
     </com.google.android.material.textfield.TextInputLayout>
 
 
-
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/b_create_playlist"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/padding24"
         android:layout_marginHorizontal="@dimen/padding16"
-        android:text="@string/create"
-        android:textAllCaps="false"
+        android:background="@drawable/button_create"
+        android:enabled="false"
         android:fontFamily="@font/ys_display_medium"
-        android:textSize="@dimen/primary_text_size_16"
+        android:inputType="textCapSentences"
+        android:padding="@dimen/padding12"
+        android:text="@string/create"
         android:textColor="@color/white"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textSize="@dimen/primary_text_size_16"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
