--- a/app/src/main/res/layout/library_playlists_fragment.xml
+++ b/app/src/main/res/layout/library_playlists_fragment.xml
@@ -46,4 +46,15 @@
         app:layout_constraintTop_toBottomOf="@+id/iv_message_image"
         android:text="@string/no_playlists" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginHorizontal="@dimen/padding16"
+        android:layout_marginTop="@dimen/padding16"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/b_new_playlist"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
