--- a/app/src/main/res/layout/playlist_item.xml
+++ b/app/src/main/res/layout/playlist_item.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="3dp"
-    android:background="@null"
-    card_view:cardElevation="5dp">
+    android:orientation="vertical"
+    android:padding="@dimen/padding8">
 
-    <LinearLayout
-        android:layout_width="match_parent"
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@null"
-        android:orientation="vertical">
+        card_view:cardCornerRadius="@dimen/padding8"
+        card_view:cardElevation="0dp"
+        android:backgroundTint="@android:color/transparent">
 
         <ImageView
             android:id="@+id/iv_playlist_image"
@@ -20,6 +22,10 @@
             android:layout_height="160dp"
             android:scaleType="centerCrop"
             android:src="@drawable/default_album_image" />
+    </androidx.cardview.widget.CardView>
+
+
+
 
         <TextView
             android:id="@+id/tv_playlist_name"
@@ -43,6 +49,6 @@
             android:textSize="@dimen/primary_text_size_16"
             tools:text="Количество треков" />
 
-    </LinearLayout>
 
-</androidx.cardview.widget.CardView>
+
+</LinearLayout>
