--- a/app/src/main/res/layout/playlist_item_to_botton_sheet.xml
+++ b/app/src/main/res/layout/playlist_item_to_botton_sheet.xml
@@ -30,6 +30,7 @@
         android:id="@+id/tv_playlist_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        style="@style/bottom_sheet_title_style"
         android:layout_marginTop="@dimen/padding4"
         android:ellipsize="end"
         android:fontFamily="@font/ys_display_medium"
@@ -43,6 +44,7 @@
         android:id="@+id/tv_tracks_count"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        style="@style/bottom_sheet_title_style"
         android:layout_marginVertical="@dimen/padding4"
         android:ellipsize="end"
         android:fontFamily="@font/ys_display_medium"
