--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -1,6 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <!-- Стили TOAST -->
+    <style name="myToast">
+        <item name="stTextBold">true</item>
+        <item name="stTextColor">@color/yp_black</item>
+        <item name="stTextSize">14sp</item>
+        <item name="stColorBackground">@color/white</item>
+        <item name="stSolidBackground">true</item>
+        <item name="stStrokeWidth">3dp</item>
+        <item name="stStrokeColor">#fff</item>
+        <item name="stLength">LONG</item> LONG or SHORT
+        <item name="stRadius">5dp</item>
+    </style>
+
     <!-- Стили для Стартового экрана -->
 
     <style name="Title">
@@ -104,6 +117,25 @@
 
     <!-- Стили для экрана создания нового альбома -->
     <style name="new_playlist_edit_text_style" parent="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+    </style>
+
+    <style name="play_list_create_album_image">
+        <item name="android:backgroundTint">@color/yp_black</item>
+    </style>
+
+
+
+    <!-- Стиль для BottomSheet на экране аудиоплеера  -->
+    <style name="bottom_sheet_title_style">
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="bottom_sheet_style">
+        <item name="android:backgroundTint">@color/yp_black</item>
+    </style>
+
+    <style name="bottom_sheet_view_style">
+        <item name="android:backgroundTint">@color/white</item>
     </style>
 
 </resources>
