--- a/app/src/main/res/layout/playlist_fragment.xml
+++ b/app/src/main/res/layout/playlist_fragment.xml
@@ -9,7 +9,22 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:id="@+id/iv_button_back"
+            style="@style/SettingsActivityTitle"
+            android:layout_width="@dimen/button_back_size"
+            android:layout_height="@dimen/button_back_size"
+            android:layout_gravity="center"
+            android:layout_marginTop="@dimen/padding4"
+            android:layout_marginStart="@dimen/padding16"
+            android:clickable="true"
+            android:contentDescription="@string/title_back"
+            android:focusable="true"
+            android:src="@drawable/button_back"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/iv_playlist_image"
@@ -121,7 +136,7 @@
         android:background="@drawable/bottom_sheet_bg"
         android:orientation="vertical"
         android:foreground="?android:attr/selectableItemBackground"
-        app:behavior_hideable="true"
+        app:behavior_hideable="false"
         app:behavior_peekHeight="170dp"
         app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
         tools:visibility="visible">
@@ -132,6 +147,18 @@
             android:layout_gravity="center"
             android:layout_marginTop="10dp"
             android:background="@drawable/rounder"/>
+
+        <TextView
+            android:id="@+id/tv_empty_list"
+            style="@style/MessageError"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="@dimen/padding32"
+            android:fontFamily="@font/ys_display_medium"
+            android:textSize="@dimen/primary_text_size_15"
+            android:textAlignment="center"
+            android:text="@string/playlist_is_empty"/>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_tracks_list"
