--- a/app/src/main/res/navigation/main_navigation_graph.xml
+++ b/app/src/main/res/navigation/main_navigation_graph.xml
@@ -52,5 +52,9 @@
         android:id="@+id/playlistFragment"
         android:name="com.example.playlistmaker.presentation.ui.playlist.fragment.PlaylistFragment"
         android:label="playlist_fragment"
-        tools:layout="@layout/playlist_fragment" />
+        tools:layout="@layout/playlist_fragment" >
+        <action
+            android:id="@+id/action_playlistFragment_to_playerFragment2"
+            app:destination="@id/playerFragment" />
+    </fragment>
 </navigation>
